# type-union

./: Cargo.toml  readme.md
src/: lib.rs
tests/: test.rs
tests/ui/: declare-type-union.rs  display.rs  eq.rs  expand-macros.rs  hrt-bound.rs  impl-non-type-union.rs  iterator-default-item.rs  iterator-type-union-item.rs  iterator.rs  partial-eq-type-union.rs
type-union-derive/: Cargo.toml
type-union-derive/src/: lib.rs  meta_union.rs  utils.rs
type-union-derive/src/impl_declaration/: either_type.rs  folder.rs  generic_type.rs  generics.rs  macro_resolver.rs  mod.rs  template.rs  variadic.rs  wildcard_param.rs
type-union-derive/src/impl_declaration/solver/: inferred_value.rs  mod.rs  solver.rs  type_mapping.rs  type_union_set.rs  unresolved_type_mapping.rs
type-union-derive/src/input/: define_type_union.rs  impl_attr.rs  mod.rs  type_signature.rs  type_union.rs  type_union_declaration.rs  type_union_definition.rs  type_union_match.rs  typed_match.rs
type-union-derive/src/utils/: generator.rs  looks_like.rs  mod.rs  punctuated_set.rs  syn_ext.rs
